# django-party

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  cypress.config.js  docker-compose.yml  fly.toml  hello.py  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
core/: settings.py  urls.py
cypress/support/: commands.js
party/: admin.py  forms.py  models.py  urls.py
party/migrations/: 0001_initial.py  0002_party_guest_gift.py
party/static/party/src/: main.css
party/templates/party/: base.html
party/templates/party/general/: page_party_organizer_login.html
party/templates/party/gift_registry/: page_gift_registry.html  partial_gift_detail.html  partial_gift_new.html  partial_gift_removed.html  partial_gift_update.html
party/templates/party/guest_list/: page_guest_list.html  partial_guest_filter.html  partial_guest_filter_and_list.html  partial_guest_list.html
party/templates/party/new_party/: page_new_party.html
party/templates/party/party_detail/: page_party_detail.html  partial_party_detail.html  partial_party_edit_form.html
party/templates/party/party_list/: page_parties_list.html  partial_parties_list.html
party/tests/: conftest.py  test_gift_registry.py  test_guest_list.py  test_new_party.py  test_party_list.py
party/views/: __init__.py  gift_registry_views.py  guest_list_views.py  new_party_views.py  party_details_views.py  party_list_views.py
staticfiles/party/css/: tailwind_output.css
