[project]
name = "django-party"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "crispy-bootstrap4>=2024.10",
  'django>=5.1.2',
  "django-allauth[socialaccount]>=65.6.0",
  "django-browser-reload>=1.18.0",
  "django-crispy-forms>=2.3",
  "django-environ>=0.12.0",
  "gunicorn>=23.0.0",
  "pytest-django>=4.10.0",
  "rust-just>=1.40.0",
  "whitenoise>=6.9.0",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = "tests.py test_*.py"
